--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,33 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
 
+  deploy:
+    machine:
+      enabled: true
+
+    working_directory: ~/client
+
+    steps:
+      - add_ssh_keys:
+        fingerprints:
+          - "84:ae:c7:67:a4:8f:d5:83:49:cb:c2:82:a7:2a:43:7c"
+      - checkout
+      - run:
+          name: Push Master to Production
+          command: |
+            git push https://github.com/garychengc/scheduler.git master:production
+
 workflows:
   version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: production
+      - deploy:
+          filters:
+            branches:
+              ignore: production
+          requires:
+            - build
